fix: update API URL configuration for production environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,14 +58,14 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       args:
-        NEXT_PUBLIC_API_URL: http://backend:3000
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
     container_name: smartcompras-frontend
     restart: unless-stopped
     environment:
       NODE_ENV: production
       PORT: 5173
       HOSTNAME: "0.0.0.0"
-      NEXT_PUBLIC_API_URL: http://backend:3000
+      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
       NEXT_TELEMETRY_DISABLED: 1
     ports:
       - "5173:5173"
